fixed alignment of the text in total save

--- a/src/components/Wallet/Gas/GasTank/GasTank.scss
+++ b/src/components/Wallet/Gas/GasTank/GasTank.scss
@@ -48,6 +48,7 @@
         .total-save {
             border: none;
             align-items: flex-end;
+            text-align: end;
         }
     }
 
